@@ -16,7 +16,8 @@ Version 7.43-rc0 - 2024-06-02
   - Flarm gauge fix radar size
   - infobox management page rename buttons for copying sets
   - consistent naming of ok/close buttons and placement
-  - add PanTo button to waypoints dialog if opened from task related infoboxen
+  - add PanTo button to waypoints dialog if opened from task related infoboxen  
+  - Added user-defined frequency list dialog
 * devices
   - add Larus driver
 * windows
